# f1data

./: .env.example  .gitignore  Makefile  README.md
backend/: .env.example  desktop_server.py  requirements.txt
backend/app/: cache.py  config.py  main.py  models.py  service.py
backend/app/adapters/: data_source_manager.py  headshots.py  historical.py  history_adapter.py  jolpica_adapter.py  mock_adapter.py  openf1_adapter.py  pitstop_service.py  pitwall_adapter.py
backend/app/analysis/: engine.py  events.py  normalize.py  pace.py  practice.py  qa.py  qualifying.py  strategy.py  whatif.py
backend/app/mock/: simulator.py
backend/tests/: test_analysis.py  test_practice_and_sources.py  test_qa_and_api.py  test_simulator.py  test_website_hardening.py
desktop/: pitwall-iq-backend.spec
desktop/scripts/: build-backend.sh  generate_icons.py
docs/: ARCHITECTURE.md  ASK_ENGINE.md  DATA_SOURCES.md  DEPLOYMENT.md  DESKTOP.md  HISTORICAL_EXPLORER.md  MOBILE_ROADMAP.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
frontend/src-tauri/binaries/: .gitignore
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/explorer/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/components/charts/: PaceAnalysis.tsx  (+3 more)
frontend/src/lib/: api.ts  compounds.ts  format.ts  mode.tsx  types.ts
(+23 files in other folders)
